...
    const val FINISH_ONBOARDING_BUTTON = "finish_onboarding_button"
    const val ONBOARDING_PAGER = "onboarding_pager"
    const val ONBOARDING_NEXT_BUTTON = "onboarding_next_button"
    const val ONBOARDING_BACK_BUTTON = "onboarding_back_button"
    const val ONBOARDING_PAGE_INDICATOR = "onboarding_page_indicator"
    const val ACCESSIBILITY_CONFIRMATION_PAGE = "accessibility_confirmation_page"
    const val ACCESSIBILITY_GUIDE_SHEET = "accessibility_guide_sheet"

    const val HOME_SCREEN = "home_screen"
    const val HOME_READY_SCREEN = "home_ready_screen"
    const val HOME_PERMISSION_REQUIRED_SCREEN = "home_permission_required_screen"
    const val HOME_PERMISSION_REQUIRED_PRIMARY_BUTTON = "home_permission_required_primary_button"
    const val HOME_PERMISSION_REQUIRED_HELP_BUTTON = "home_permission_required_help_button"
    const val DRAWER_MENU_BUTTON = "drawer_menu_button"
    const val DRAWER_PANEL = "drawer_panel"
    const val DRAWER_HOME_ITEM = "drawer_home_item"
    const val DRAWER_FINANCE_ITEM = "drawer_finance_item"
    const val DRAWER_DASHBOARD_FINANCE_ITEM = "drawer_dashboard_finance_item"
    const val DRAWER_SECURITY_ITEM = "drawer_security_item"
    const val DRAWER_TOOLS_ITEM = "drawer_tools_item"
    const val DRAWER_SETTINGS_ITEM = "drawer_settings_item"
    const val DRAWER_HELP_ITEM = "drawer_help_item"
    const val DRAWER_PRIVACY_ITEM = "drawer_privacy_item"
    const val DRAWER_FEEDBACK_ITEM = "drawer_feedback_item"
    const val DRAWER_DIAGNOSTICS_ITEM = "drawer_diagnostics_item"
    const val DIAGNOSTICS_SCREEN = "diagnostics_screen"
    const val OPEN_DASHBOARD_FINANCE_SCREEN = "open_dashboard_finance_screen"
    const val FINANCIAL_ACTIVITY_ACTION = "financial_activity_action"
    const val FINANCIAL_INSIGHTS_ACTION = "financial_insights_action"
    const val FINANCIAL_REPORTS_ACTION = "financial_reports_action"
...
    const val FINANCIAL_DATA_QUALITY_SCREEN = "financial_data_quality_screen"
    const val RESTART_READING_BUTTON = "restart_reading_button"
    const val STATUS_PILL = "status_pill"
    const val MONITORING_SWITCH = "monitoring_switch"
    const val HOME_HERO_CARD = "home_hero_card"
    const val HOME_GOAL_CARD = "home_goal_card"
    const val HOME_PRIMARY_ACTION = "home_primary_action"
    const val HOME_SECONDARY_ACTION = "home_secondary_action"
    const val HOME_GOAL_ACTION = "home_goal_action"
    const val OPEN_UBER_DRIVER_BUTTON = "open_uber_driver_button"
    const val OPEN_99_DRIVER_BUTTON = "open_99_driver_button"
    const val HOME_FOOTER_HELP = "home_footer_help"
    const val HOME_FOOTER_PRIVACY = "home_footer_privacy"
...
    const val SAFETY_SUMMARY_CARD = "safety_summary_card"
    const val SECURITY_SCREEN = "security_screen"
    const val SECURITY_TOOLS_SCREEN = "security_tools_screen"
    const val SECURITY_CAMERA_CARD = "security_camera_card"
    const val SECURITY_CONFIGURE_ACTION = "security_configure_action"
    const val SECURITY_RECORDINGS_ACTION = "security_recordings_action"
    const val SETTINGS_SCREEN = "settings_screen"
    const val SETTINGS_BACK_BUTTON = "settings_back_button"
    const val SETTINGS_PRIVACY_ROW = "settings_privacy_row"
    const val SETTINGS_ADVANCED_ROW = "settings_advanced_row"
    const val SETTINGS_GOAL_ROW = "settings_goal_row"
    const val SETTINGS_POSITION_ROW = "settings_position_row"
    const val SETTINGS_OVERLAY_THEME_ROW = "settings_overlay_theme_row"
    const val OVERLAY_POSITION_SCREEN = "overlay_position_screen"
    const val OVERLAY_POSITION_SAVE_BUTTON = "overlay_position_save_button"
    const val OVERLAY_POSITION_DEFAULT_BUTTON = "overlay_position_default_button"
    const val OVERLAY_THEME_SCREEN = "overlay_theme_screen"
    const val OVERLAY_THEME_PREVIEW = "overlay_theme_preview"
    const val OVERLAY_THEME_CLASSIC = "overlay_theme_classic"
    const val OVERLAY_THEME_OUTLINED = "overlay_theme_outlined"
    const val OVERLAY_THEME_SOLID = "overlay_theme_solid"
    const val OVERLAY_THEME_SAVE_BUTTON = "overlay_theme_save_button"
    const val OVERLAY_THEME_DEFAULT_BUTTON = "overlay_theme_default_button"
    const val HELP_SCREEN = "help_screen"
    const val HELP_PRIVACY_BUTTON = "help_privacy_button"
    const val HELP_SUPPORT_BUTTON = "help_support_button"
    const val FAQ_ITEM = "faq_item"
    const val FEEDBACK_FORM_SCREEN = "feedback_form_screen"
    const val FEEDBACK_TYPE_PROBLEM = "feedback_type_problem"
    const val FEEDBACK_TYPE_SUGGESTION = "feedback_type_suggestion"
    const val FEEDBACK_TYPE_QUESTION = "feedback_type_question"
    const val FEEDBACK_MESSAGE_INPUT = "feedback_message_input"
    const val FEEDBACK_INCLUDE_APP_INFO_SWITCH = "feedback_include_app_info_switch"
    const val FEEDBACK_SUBMIT_BUTTON = "feedback_submit_button"
    const val FEEDBACK_EMAIL_BUTTON = "feedback_email_button"
    const val FEEDBACK_SUCCESS_SCREEN = "feedback_success_screen"
    const val FEEDBACK_SUCCESS_HOME_BUTTON = "feedback_success_home_button"
    const val FEEDBACK_SUCCESS_SEND_ANOTHER_BUTTON = "feedback_success_send_another_button"
    const val PREMIUM_SCREEN = "premium_screen"
    const val PREMIUM_START_BUTTON = "premium_start_button"
...
    const val DRIVER_GOAL_KM_INPUT = "driver_goal_km_input"
    const val DRIVER_GOAL_HOUR_INPUT = "driver_goal_hour_input"
    const val DRIVER_GOAL_SAVE_BUTTON = "driver_goal_save_button"
    const val GOAL_PRESET_BEGINNER = "goal_preset_beginner"
    const val GOAL_PRESET_BALANCED = "goal_preset_balanced"
    const val GOAL_PRESET_DEMANDING = "goal_preset_demanding"
    const val GOAL_SUGGESTIONS_BUTTON = "goal_suggestions_button"
    const val GOAL_SUGGESTIONS_SHEET = "goal_suggestions_sheet"
    const val GOAL_SEMAPHORE_PREVIEW = "goal_semaphore_preview"
}

